fix(footer): image of main footer wasn't covering all div

--- a/okp4-gatsby/src/assets/styles/pages/_homepage.scss
+++ b/okp4-gatsby/src/assets/styles/pages/_homepage.scss
@@ -405,7 +405,7 @@ main.homepage {
   .docs {
     position: relative;
     background-color: $nightblue;
-    padding: 120px 0;
+    padding: 120px 0 0;
     margin-top: 60px;
 
     .docs__header {
