--- a/okp4-gatsby/src/assets/styles/transversals/_footer.scss
+++ b/okp4-gatsby/src/assets/styles/transversals/_footer.scss
@@ -58,6 +58,11 @@ footer.footer {
       bottom: 0;
       left: 0;
 
+      .imgWrapper {
+        width: 100%;
+        height: 100%;
+      }
+
       img {
         position: absolute;
         top: 0;
